State the order the term path builds its index in
The stated-order repair reached reading.json for this repository and not for
tika, because it never reaches the code the difference lives in: no match in
this tree resolves to more than one concept, and tika has seven.

Three more collections stated no order and all three are walked:

  WordKeyedConcepts keyed its index with Map.copyOf, so terms() handed its
  callers a different order on every run. Two published terms can share a key —
  CSO states cache and caching, and their dictionary forms collide — and the
  walk appends each term's concept under that key, so a match named its
  concepts in a different order every run. broaderIn writes a parent under its
  concept's label with the last writer winning, so the parent kept moved too.

  SpecificTerms.kept answered with a Set.copyOf and is walked to build a
  further index.

  VocabularyNull.byReference, ReadingExport.thresholds and
  ExportedTaxonomy.matchesByNormalisation are serialised, and Map.copyOf
  re-shuffles whatever it is handed, so the file's own key order moved.

Measured on tika, which exercises all of it: two reads in separate JVMs now
give a byte-identical reading.json, and evidence.json differs only in
elapsedMillis. The same two reads before this change differed in 30 branch
agreements and 14 concept rows. checkAll and the pinned findings are green.

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>